--- a/entrevistas/scss/_settings.scss
+++ b/entrevistas/scss/_settings.scss
@@ -79,7 +79,7 @@ $foundation-palette: (
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
-$black: #0a0a0a;
+$black: #000000;
 $white: #e6e6e6;
 $body-background: $white;
 $body-font-color: $black;
