--- a/entrevistas/scss/app.scss
+++ b/entrevistas/scss/app.scss
@@ -282,7 +282,7 @@ text-transform: uppercase;
 }
 .modal-window p{
   line-height: 1.6;
-  text-align: justify;
+  text-align: left;
   font-size: 1.7rem;
 }
 .modal-window h2, .modal-window h3,.modal-window h5, .modal-window h6, .modal-window p, .modal-window #fondart{
